--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,15 @@
     /* Global colors */
 
     /* COLORS */
-    --primary-background-color: #0d1b2a; 
-    --primary-text-color: #538ecc;
+    --primary-background-color: #1c1b1b; 
+    --primary-text-color: #fbfbfb;
+    
+    --contrast-color: #ff4500;
 
     --secondary-background-color: var(--primary-text-color);
     --secondary-text-color: var(--primary-background-color);
 
-    --primary-hover-color: #9ac9fc; 
+    --primary-hover-color: var(--contrast-color); 
 
     --hamburger-menu-color: #adb09d; 
 }
@@ -70,8 +72,41 @@ h2,h3{
 }
 
 nav{
-    height: 90%;
+   height: 90%;
 }
+
+.home{
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.619), rgba(0, 0, 0, 0.5)), 
+        url("../assets/background.jpg");
+    background-size:     cover;                      
+    background-repeat:   no-repeat;
+    background-position: center center; 
+    height: 100vh;
+    background-color: var(--primary-background-color);
+}
+
+.home-card{
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.button {
+    background-color: var(--contrast-color);
+    color: var(--primary-text-color);
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 50px;
+    cursor: pointer;
+    width: fit-content;
+    border-radius: 0px;
+  }
+
+  .button:hover{
+    color: var(--primary-background-color);
+  }
 
 .name-title{
     padding-top: 40px;
@@ -103,12 +138,18 @@ nav{
     background-color: var(--primary-background-color);
     color: var(--primary-text-color);
     padding: 30px 50px 0px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .secondary-theme{
     background-color: var(--secondary-background-color);
     color: var(--secondary-text-color);
     padding: 30px 50px 0px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 
@@ -119,6 +160,11 @@ nav{
 
 .intro{
     text-align: center;
+}
+
+
+.about{
+    height: 50vh;
 }
 
 .certification-item{
@@ -135,6 +181,7 @@ nav{
 
 .education-item{
     padding: 15px 0;
+    text-align: left;
 }
 
 .education-item :first-child{
@@ -165,6 +212,10 @@ nav{
     padding: 15px 0px;
 }
 
+.projects a{
+    color: var(--contrast-color);
+}
+
 .x-button{
     position: absolute;
     top: 0px;
@@ -178,6 +229,7 @@ nav{
 .desktop-menu{
     display: none;
 }
+
 
 .mobile-menu{
     height: 100%; /* 100% Full-height */
@@ -236,6 +288,10 @@ nav{
     margin: 30px 0 20px 0;
 }
 
+.contact-icons a:hover{
+    color: var(--contrast-color);
+}
+
 
 
 .photo-title{
@@ -266,10 +322,10 @@ small{
         text-align: center;
     }
     main{
-        margin: 0 15vw;
+        /*margin: 0 15vw;*/
     }
-    .projects h3{
-        text-align: center;
+    .projects{
+        text-align: left;
     }
     /*!!!!!!!*/
 
@@ -277,26 +333,68 @@ small{
         display: none;
     }
 
+    .home-card{
+        display: grid;
+        grid-template-areas: "img name-title"
+                            "img button";
+        grid-template-columns: auto 1fr; 
+        align-items: center;
+        justify-items: center;
+        gap: 0 50px 0 50px;
+    }
+
+    .profile-photo{
+        grid-area: img;
+        margin-right: 100px;
+    }
+    .name-title{
+        grid-area: name-title;
+        font-size: x-large;
+    }
+    .button{
+        grid-area: button;
+    
+    }
+
+    nav{
+        padding: 50px;
+        height: 50px;
+        width: 100vw;
+        background-color: #151515eb;
+        box-shadow: 0 4px 2px -2px #151515;
+        
+    }
+
     .desktop-menu{
-        display: block;
+        display: flex;
         position: fixed;
-        height: 100vh;
-        padding-top : 0;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 20px;
+        width: 100%;
+    }
+
+    .desktop-menu .contact-icons{
+        display: flex;
+        align-items: center;
+        gap: 1rem; /* Space between icons */
+        margin: 0;
     }
 
     .desktop-menu ul {
         display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 100vh;
-        /*padding: 0px 80px 30px 80px;*/
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        gap: 5vw;
         
     }
 
     .desktop-menu ul li{
         padding: 10px;
         text-align: center;
-        font-size: large;
+        font-size: small;
+        font-weight: 500;
         
     }
     .desktop-menu a:hover{
